# rust-cdk-serverless-playground

./: .gitignore  cdk.json  package-lock.json  package.json
lib/: cdk-udemy-stack.ts
lib/lambda/: Dockerfile
src/product/: Cargo.toml
src/product/src/: main.rs
test/: cdk-udemy.test.ts
