[package]
name = "product"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.53.0"
aws-sdk-dynamodb = "0.23.0"
aws-types = "0.53.0"
aws_lambda_events = "0.7.2"
http = "0.2.8"
lambda_runtime = "0.7.2"
log = "0.4.17"
simple_logger = "4.0.0"
tokio = "1.24.1"
